add product detail page and enhance webpack compilation

--- a/src/en/about.ejs
+++ b/src/en/about.ejs
@@ -13,7 +13,7 @@
   <meta property="og:url" content="/en/about/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="About" />
-  <%- include('../partial/head.en.ejs') %>
+  <%- include('../partial/head.ejs') %>
   <style id='ctl_styles-inline-css' type='text/css'>
     .cool_timeline h1.timeline-main-title {
       font-weight: inherit !important;
@@ -296,7 +296,7 @@
       display: none;
     }
   </style>
-  <link rel="stylesheet" type="text/css" href="../assets/css/index4.css"
+  <link rel="stylesheet" type="text/css" href="/assets/css/index4.css"
   media="all" />
 
   <style type="text/css" data-type="vc_shortcodes-custom-css">
@@ -677,11 +677,11 @@
                         <div class="wpb_text_column wpb_content_element  nha_cung_cap_text">
                           <div class="wpb_wrapper">
                             <p><img class="alignnone size-full wp-image-35 aligncenter" style="margin-bottom: 30px;"
-                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
+                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
                             <h3 style="text-align: center;">Raising the range of livestock</h3>
                             <h3 style="text-align: center;">Good feed, good food</h3>
                             <p><img class="size-full wp-image-36 aligncenter"
-                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
+                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
                           </div>
                         </div>
                       </div>
@@ -813,11 +813,11 @@
       <%- include('../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
-  <%- include('../partial/bodyAssets.en.ejs') %>
-  <script type='text/javascript' src='../assets/js/waypoints.min.js?ver=5.4.7'></script>
-  <script type='text/javascript' src='../assets/js/jquery.viewportchecker.js'></script>
-  <script type='text/javascript' src='../assets/js/jquery.prettyPhoto.js'></script>
-  <script type='text/javascript' src='../assets/js/ctl_scripts.js'></script>
+  <%- include('../partial/bodyAssets.ejs') %>
+  <script type='text/javascript' src='/assets/js/waypoints.min.js?ver=5.4.7'></script>
+  <script type='text/javascript' src='/assets/js/jquery.viewportchecker.js'></script>
+  <script type='text/javascript' src='/assets/js/jquery.prettyPhoto.js'></script>
+  <script type='text/javascript' src='/assets/js/ctl_scripts.js'></script>
 </body>
 
 </html>
