--- a/src/en/contact.ejs
+++ b/src/en/contact.ejs
@@ -13,7 +13,7 @@
   <meta property="og:url" content="/en/contact/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Contact" />
-  <%- include('../partial/head.en.ejs') %>
+  <%- include('../partial/head.ejs') %>
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-459.disabled_footer_top .footer_top_holder,
     .page-id-459.disabled_footer_bottom .footer_bottom_holder {
@@ -21,7 +21,7 @@
     }
   </style>
 
-  <script src='../assets/js/e4y1l.js' type="text/javascript"></script>
+  <script src='/assets/js/e4y1l.js' type="text/javascript"></script>
 </head>
 
 <body data-rsssl=1
@@ -164,7 +164,7 @@
       <%- include('../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
-  <%- include('../partial/bodyAssets.en.ejs') %>
+  <%- include('../partial/bodyAssets.ejs') %>
 </body>
 
 </html>
