--- a/src/en/index.ejs
+++ b/src/en/index.ejs
@@ -19,7 +19,7 @@
   <meta name="twitter:description"
     content="Thế mạnh đặc biệt của chúng tôi là sự phối hợp để tạo ra các điều kiện kinh doanh dựa vào danh mục khách hàng phong phú. Qua đó, chúng tôi có cơ sở vững chắc để mang đến những giải pháp tối ưu cho từng khách hàng. Với chúng tôi, hiệu quả chính là điều kiện hàng đầu trước khi thực hiện bất kỳ dự án nào." />
   <meta name="twitter:title" content="Công Ty" />
-  <%- include('../partial/head.en.ejs') %>
+  <%- include('../partial/head.ejs') %>
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-829.disabled_footer_top .footer_top_holder,
     .page-id-829.disabled_footer_bottom .footer_bottom_holder {
@@ -266,7 +266,7 @@
                                   Marine, Dairy and other complementary products in line with technology and Production
                                   standards for animal feed in Vietnam.</p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/san-pham/feed-commodities/">Xem thêm</a>
+                                  href="/en/product/nguyen-lieu-thuc-pham-my-pham-en.html">Xem thêm</a>
                               </div>
                             </div>
                             <div class="slick-item">
@@ -276,7 +276,7 @@
                                   - cosmetics at reasonable prices suitable to the conditions of food production and
                                   cosmetics in Vietnam.</p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/san-pham/nguyen-lieu-thuc-pham-my-pham/">Xem thêm</a>
+                                  href="/en/product/nguyen-lieu-thuc-pham-my-pham-en.html">Xem thêm</a>
                               </div>
                             </div>
                             <div class="slick-item">
@@ -286,7 +286,7 @@
                                   alternative milk replacers, nutrients to support disease management, improved survival
                                   and optimum livestock productivity.</p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/san-pham/san-pham-dung-cho-nong-trai/">Xem thêm</a>
+                                  href="/en/product/san-pham-dung-cho-trang-trai-en.html">Xem thêm</a>
                               </div>
                             </div>
                             <div class="slick-item">
@@ -296,7 +296,7 @@
                                   designed to optimize costs and maximize animal productivity, creating a sustainable
                                   competitive advantage for the product.</p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/san-pham/phu-gia-chan-nuoi/">Xem thêm</a>
+                                  href="/en/product/phu-gia-chan-nuoi-en.html">Xem thêm</a>
                               </div>
                             </div>
                             <div class="slick-item">
@@ -306,7 +306,7 @@
                                   technology - They are designed to optimize cost and performance of livestock, in line
                                   with the environment and the technology of producing feeds. farming in Vietnam.</p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/en/product/premix-vitamin-en/">Xem thêm</a>
+                                  href="/en/product/premix-vitamin-khoang-en.html">Xem thêm</a>
                               </div>
                             </div>
                           </div>
@@ -706,8 +706,8 @@
     }
   </script>
 
-  <%- include('../partial/bodyAssets.en.ejs') %>
-  <script type='text/javascript' src='../assets/js/waypoints.min.js?ver=5.4.7'></script>
+  <%- include('../partial/bodyAssets.ejs') %>
+  <script type='text/javascript' src='/assets/js/waypoints.min.js?ver=5.4.7'></script>
 </body>
 
 </html>
