--- a/src/en/news-events.ejs
+++ b/src/en/news-events.ejs
@@ -13,7 +13,7 @@
   <meta property="og:url" content="/en/news-events/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="News &amp; Events" />
-  <%- include('../partial/head.en.ejs') %>
+  <%- include('../partial/head.ejs') %>
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-452.disabled_footer_top .footer_top_holder,
     .page-id-452.disabled_footer_bottom .footer_bottom_holder {
@@ -75,7 +75,7 @@
       <%- include('../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
-  <%- include('../partial/bodyAssets.en.ejs') %>
+  <%- include('../partial/bodyAssets.ejs') %>
 </body>
 
 </html>
