--- a/src/en/partner.ejs
+++ b/src/en/partner.ejs
@@ -13,7 +13,7 @@
   <meta property="og:url" content="/en/partner/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Partner" />
-  <%- include('../partial/head.en.ejs') %>
+  <%- include('../partial/head.ejs') %>
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-463.disabled_footer_top .footer_top_holder,
     .page-id-463.disabled_footer_bottom .footer_bottom_holder {
@@ -69,7 +69,7 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-78"
-                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
+                                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="141"
                                                 srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_1-300x141.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_1.png 369w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
@@ -130,7 +130,7 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-80"
-                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
+                                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="300"
                                                 srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-300x300.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-150x150.png 150w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2.png 360w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
@@ -158,7 +158,7 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-80"
-                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
+                                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="300"
                                                 srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-300x300.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-150x150.png 150w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2.png 360w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
@@ -203,7 +203,7 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-79"
-                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
+                                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="289"
                                                 srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_3-300x289.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_3.png 324w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
@@ -249,11 +249,11 @@
                         <div class="wpb_text_column wpb_content_element  nha_cung_cap_text">
                           <div class="wpb_wrapper">
                             <p><img class="alignnone size-full wp-image-35 aligncenter" style="margin-bottom: 30px;"
-                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
+                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
                             <h3 style="text-align: center;">Connect the livestock industry<br />
                               for a prosperous life</h3>
                             <p><img class="size-full wp-image-36 aligncenter"
-                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
+                                src="/assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
                           </div>
                         </div>
                       </div>
@@ -348,8 +348,8 @@
     </div>
   </div>
 
-  <%- include('../partial/bodyAssets.en.ejs') %>
-  <script type='text/javascript' src='../assets/js/waypoints.min.js?ver=5.4.7'></script>
+  <%- include('../partial/bodyAssets.ejs') %>
+  <script type='text/javascript' src='/assets/js/waypoints.min.js?ver=5.4.7'></script>
 </body>
 
 </html>
