--- a/src/index.ejs
+++ b/src/index.ejs
@@ -306,7 +306,7 @@
                                   đầu thế giới – chúng được thiết kế nhằm tối ưu hóa chi phí và năng suất vật nuôi, phù
                                   hợp với môi trường và công nghệ sản xuất thức ăn chăn nuôi tại Việt Nam.</p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/san-pham/premix-vitamin-khoang/">Xem thêm</a>
+                                  href="/san-pham/premix-vitamin-khoang.html">Xem thêm</a>
                               </div>
                             </div>
                             <div class="slick-item">
@@ -317,7 +317,7 @@
                                   phẩm bổ trợ khác phù hợp với công nghệ và tiêu chuẩn sản xuất Thức ăn chăn nuôi tại
                                   Việt Nam.</p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/san-pham/nong-san-nguyen-lieu-tho/">Xem thêm</a>
+                                  href="/san-pham/nong-san-nguyen-lieu-tho.html">Xem thêm</a>
                               </div>
                             </div>
                             <div class="slick-item">
@@ -328,7 +328,7 @@
                                   tạo lợi thế cạnh tranh bền vững cho sản phẩm.
                                 </p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/san-pham/phu-gia-chan-nuoi/">Xem thêm</a>
+                                  href="/san-pham/phu-gia-chan-nuoi.html">Xem thêm</a>
                               </div>
                             </div>
                             <div class="slick-item">
@@ -338,7 +338,7 @@
                                   nhóm sữa thay thế, chất dinh dưỡng hỗ trợ điều trị bệnh, nâng cao tỷ lệ sống và tối ưu
                                   năng suất chăn nuôi.</p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/san-pham/san-pham-dung-cho-nong-trai/">Xem thêm</a>
+                                  href="/san-pham/san-pham-dung-cho-trang-trai.html">Xem thêm</a>
                               </div>
                             </div>
                             <div class="slick-item">
@@ -348,7 +348,7 @@
                                   phẩm – Mỹ phẩm với mức giá hợp lý, phù hợp với điều kiện sản xuất Thực phẩm và Mỹ phẩm
                                   tại Việt Nam.</p>
                                 <a class="button_learmore"
-                                  href="https://www.viet-acc.com/san-pham/nguyen-lieu-thuc-pham-my-pham/">Xem thêm</a>
+                                  href="/san-pham/nguyen-lieu-thuc-pham-my-pham.html">Xem thêm</a>
                               </div>
                             </div>
                           </div>
