--- a/src/partial/footer.ejs
+++ b/src/partial/footer.ejs
@@ -40,9 +40,9 @@
                     <div class="wpb_single_image wpb_content_element vc_align_left">
                       <div class="wpb_wrapper">
                         <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="402" height="172"
-                            src="assets/img/logo_MA.png"
+                            src="/assets/img/logo_MA.png"
                             class="vc_single_image-img attachment-full" alt=""
-                            srcset="assets/img/index/footer.png 402w, assets/img/index/footer-300x128.png 300w, assets/img/index/footer-400x172.png 400w"
+                            srcset="/assets/img/index/footer.png 402w, /assets/img/index/footer-300x128.png 300w, /assets/img/index/footer-400x172.png 400w"
                             sizes="(max-width: 402px) 100vw, 402px" /></div>
                       </div>
                     </div>
