--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -14,15 +14,15 @@
                 <div class="q_logo">
                   <a itemprop="url" href="/">
                     <img itemprop="image" class="normal"
-                      src="assets/img/logo_no_MA.png" alt="Logo" /> <img
+                      src="/assets/img/logo_no_MA.png" alt="Logo" /> <img
                       itemprop="image" class="light"
-                      src="assets/img/index/logo.png" alt="Logo" /> <img
+                      src="/assets/img/index/logo.png" alt="Logo" /> <img
                       itemprop="image" class="dark"
-                      src="assets/img/index/logo_black.png" alt="Logo" />
+                      src="/assets/img/index/logo_black.png" alt="Logo" />
                     <img itemprop="image" class="sticky"
-                      src="assets/img/index/logo_black.png" alt="Logo" />
+                      src="/assets/img/index/logo_black.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
-                      src="assets/img/logo_no_MA.png" alt="Logo" /> </a>
+                      src="/assets/img/logo_no_MA.png" alt="Logo" /> </a>
                 </div>
               </div>
             </div>
@@ -33,7 +33,7 @@
                     <div class="textwidget custom-html-widget">
                       <ul>
                         <li><img
-                            src="assets/img/index/email copy.svg">general@minhanhxnk.com
+                            src="/assets/img/index/email copy.svg">general@minhanhxnk.com
                         </li>
                       </ul>
                     </div>
@@ -49,8 +49,8 @@
                   <div class="widget_text header_bottom_widget widget_custom_html">
                     <div class="textwidget custom-html-widget">
                       <ul class="career_header">
-                        <li><a href="nghe-nghiep.html"><img
-                              src="assets/img/index/career_icon.svg">TUYỂN
+                        <li><a href="/nghe-nghiep.html"><img
+                              src="/assets/img/index/career_icon.svg">TUYỂN
                             DỤNG</a></li>
                       </ul>
                     </div>
@@ -64,23 +64,23 @@
               <ul id="menu-main-menu" class="">
                 
                 <li id="mobile-menu-item-194" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'gioi-thieu' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
-                    href="gioi-thieu.html" class="<%= page === 'gioi-thieu' ? 'current' : '' %>"><span>Giới Thiệu</span></a><span
+                    href="/gioi-thieu.html" class="<%= page === 'gioi-thieu' ? 'current' : '' %>"><span>Giới Thiệu</span></a><span
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
                 </li>
                 <li id="mobile-menu-item-195" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'san-pham' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
-                    href="san-pham.html" class="<%= page === 'san-pham' ? 'current' : '' %>"><span>Sản Phẩm</span></a><span
+                    href="/san-pham.html" class="<%= page === 'san-pham' ? 'current' : '' %>"><span>Sản Phẩm</span></a><span
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
                 </li>
                 <li id="mobile-menu-item-93" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'doi-tac-chien-luoc' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
-                    href="doi-tac-chien-luoc.html" class="<%= page === 'doi-tac-chien-luoc' ? 'current' : '' %>"><span>Đối Tác Chiến
+                    href="/doi-tac-chien-luoc.html" class="<%= page === 'doi-tac-chien-luoc' ? 'current' : '' %>"><span>Đối Tác Chiến
                       Lược</span></a><span class="mobile_arrow"><i class="fa fa-angle-right"></i><i
                       class="fa fa-angle-down"></i></span></li>
                 <li id="mobile-menu-item-193" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'tin-tuc-su-kien' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
-                    href="tin-tuc-su-kien.html" class="<%= page === 'tin-tuc-su-kien' ? 'current' : '' %>"><span>Tin Tức Sự
+                    href="/tin-tuc-su-kien.html" class="<%= page === 'tin-tuc-su-kien' ? 'current' : '' %>"><span>Tin Tức Sự
                       Kiện</span></a><span class="mobile_arrow"><i class="fa fa-angle-right"></i><i
                       class="fa fa-angle-down"></i></span></li>
                 <li id="mobile-menu-item-94" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'gioi-thieu' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
-                    href="lien-he.html" class="<%= page === 'gioi-thieu' ? 'current' : '' %>"><span>Liên Hệ</span></a><span
+                    href="/lien-he.html" class="<%= page === 'gioi-thieu' ? 'current' : '' %>"><span>Liên Hệ</span></a><span
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
                 </li>
               </ul>
@@ -91,19 +91,19 @@
       <div class="extra-menu">
         <ul id="menu-main-menu-1" class="">
           <li id="nav-menu-item-194" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'gioi-thieu' ? 'current-menu-item current_page_item active' : '' %>"><a
-              href="gioi-thieu.html" class="<%= page === 'gioi-thieu' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Giới
+              href="/gioi-thieu.html" class="<%= page === 'gioi-thieu' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Giới
                 Thiệu</span><span class="plus"></span></a></li>
           <li id="nav-menu-item-195" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'san-pham' ? 'current-menu-item current_page_item active' : '' %>"><a
-              href="san-pham.html" class="<%= page === 'san-pham' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Sản
+              href="/san-pham.html" class="<%= page === 'san-pham' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Sản
                 Phẩm</span><span class="plus"></span></a></li>
           <li id="nav-menu-item-93" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'doi-tac-chien-luoc' ? 'current-menu-item current_page_item active' : '' %>"><a
-              href="doi-tac-chien-luoc.html" class="<%= page === 'doi-tac-chien-luoc' ? 'current' : '' %>"><i
+              href="/doi-tac-chien-luoc.html" class="<%= page === 'doi-tac-chien-luoc' ? 'current' : '' %>"><i
                 class="menu_icon blank fa"></i><span>Đối Tác Chiến Lược</span><span class="plus"></span></a></li>
           <li id="nav-menu-item-193" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'tin-tuc-su-kien' ? 'current-menu-item current_page_item active' : '' %>"><a
-              href="tin-tuc-su-kien.html" class="<%= page === 'tin-tuc-su-kien' ? 'current' : '' %>"><i
+              href="/tin-tuc-su-kien.html" class="<%= page === 'tin-tuc-su-kien' ? 'current' : '' %>"><i
                 class="menu_icon blank fa"></i><span>Tin Tức Sự Kiện</span><span class="plus"></span></a></li>
           <li id="nav-menu-item-94" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'lien-he' ? 'current-menu-item current_page_item active' : '' %>"><a
-              href="lien-he.html" class="<%= page === 'lien-he' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Liên
+              href="/lien-he.html" class="<%= page === 'lien-he' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Liên
                 Hệ</span><span class="plus"></span></a></li>
         </ul>
       </div>
