--- a/src/en/career.ejs
+++ b/src/en/career.ejs
@@ -13,7 +13,7 @@
   <meta property="og:site_name" content="VIET-ACC" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Career" />
-  <%- include('../partial/head.en.ejs') %>
+  <%- include('../partial/head.ejs') %>
   <style id='rs-plugin-settings-inline-css' type='text/css'>
     #rs-demo-id {}
   </style>
@@ -77,7 +77,7 @@
       <%- include('../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
-  <%- include('../partial/bodyAssets.en.ejs') %>
+  <%- include('../partial/bodyAssets.ejs') %>
 </body>
 
 </html>
