--- a/src/en/product.ejs
+++ b/src/en/product.ejs
@@ -14,7 +14,7 @@
   <meta property="og:url" content="/en/product/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Products" />
-  <%- include('../partial/head.en.ejs') %>
+  <%- include('../partial/head.ejs') %>
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-429.disabled_footer_top .footer_top_holder,
     .page-id-429.disabled_footer_bottom .footer_bottom_holder {
@@ -390,7 +390,7 @@
       <%- include('../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
-  <%- include('../partial/bodyAssets.en.ejs') %>
+  <%- include('../partial/bodyAssets.ejs') %>
 </body>
 
 </html>
