--- a/src/partial/head.ejs
+++ b/src/partial/head.ejs
@@ -1,13 +1,13 @@
-<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpg">
-<link rel="apple-touch-icon" href="assets/img/logo.jpg" />
+<link rel="shortcut icon" type="image/x-icon" href="/assets/img/logo.jpg">
+<link rel="apple-touch-icon" href="/assets/img/logo.jpg" />
 <link href='//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900,300italic,400italic,700italic|Roboto:100,200,300,400,500,600,700,800,900,300italic,400italic,700italic&subset=latin,latin-ext'
 rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="assets/css/index1.css" media="all" />
-<link rel="stylesheet" type="text/css" href="assets/css/index2.css" media="all" />
-<link rel="stylesheet" type="text/css" href="assets/css/index3.css" media="all" />
-<script type='text/javascript' src='assets/js/jquery.js?ver=1.12.4'></script>
-<script type='text/javascript' src='assets/js/jquery-migrate.min.js?ver=1.4.1'></script>
-<script src='assets/js/index.js' type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="/assets/css/index1.css" media="all" />
+<link rel="stylesheet" type="text/css" href="/assets/css/index2.css" media="all" />
+<link rel="stylesheet" type="text/css" href="/assets/css/index3.css" media="all" />
+<script type='text/javascript' src='/assets/js/jquery.js?ver=1.12.4'></script>
+<script type='text/javascript' src='/assets/js/jquery-migrate.min.js?ver=1.4.1'></script>
+<script src='/assets/js/index.js' type="text/javascript"></script>
 <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
   rel="stylesheet">
 <style type="text/css">
